# ecommerce-category-scraper

./: README.md  Readme.md  pyproject.toml
src/ecommerce_category_scraper/: __init__.py  category.py  common.py  process.py  product_urls.py  products.py
test/: test_1.py  test_2.py
