[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
author = "martynas.j@oxylabs.io"


[project]
name = "ecommerce-category-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "oxylabs-ai-studio>=0.2.13",
    "tenacity>=9.0.0",
    "ruff>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_category_scraper"]
